tests/NormalTests/paczka1/fuzzy1/16930384.err
Error in line 8: 2d09 A413 40,6
Error in line 9: 2d09 S294 68,8
Error in line 15: gYBJOk S294 31,6
Error in line 17: uuK A478 42,9
Error in line 22: gYBJOk S328 81,1
Error in line 16: iJxg A478 54,3
Error in line 26: uuK A413 86,3
Error in line 37: iJxg S328 61,0
